Fix scrollbar size for chrome

--- a/frontend/src/components/css/control-sidebar.css
+++ b/frontend/src/components/css/control-sidebar.css
@@ -1,5 +1,5 @@
 .control-sidebar .tab-content .tab-pane {
-  height: 100vh;
+/*  height: 100vh; */
   width: 100%;
 }
 .close-btn-on-sidebar {
